Added dev script

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "ts-loader": "^2.3.4",
     "typescript": "^2.5.2",
     "webpack": "^3.5.5"
+  },
+  "scripts": {
+    "dev": "webpack && http-server -p 3000 ./public"
   }
 }
