--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+      "sourceMap": true,
       "baseUrl": "./src/js",
         "declaration": false,
         "emitDecoratorMetadata": true,
